fix: z-index des modals

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -15,6 +15,7 @@ main {
     height: 100vh;
     width: 100%;
     display: flex;
+    z-index: 2;
 }
 
 .contact_button {
@@ -364,6 +365,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 2;
 }
 
 .player__wrapper {
